[package]
name = "libp2p-dandelion"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
bincode                 = "1.3.3"
kn0sys-lmdb-rs 		= "0.1.4"
futures 		= "0.3.30"
libp2p 			= { version = "0.54.1", features = [ "identify", "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"]}
log             	= "0.4"
rand 			= "0.8.5"
sysinfo        		= "0.33.0"
tokio 			= { version = "1.38", features = ["full"] }
env_logger 		= "0.11.5"

