[package]
name = "libp2p_dandelion"
version = "0.1.2"
edition = "2021"
authors = ["Nigel Christian <nigel.christian@hiahatf.org>"]
documentation = "https://docs.rs/libp2p-dandelion"
description = "Proof-of-concept modified Dandelion implementation extending from libp2p"
repository = "https://github.com/kn0sys/libp2p-dandelion"
license = "MIT"
keywords = [
	"anonymity",
	"p2p",
	"networking",
	"decentralization"
]
categories = ["network-programming"]

[lib]
name = "libp2p_dandelion"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
bincode                 = { version = "2.0.1", features = ["serde"]}
kn0sys-lmdb-rs 		= "0.1.6"
futures 		= "0.3.30"
libp2p 			= { version = "0.55", features = [ "identify", "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"]}
log             	= "0.4"
rand 			= "0.9"
serde			= { version = "1.0", features = ["derive"] }
sysinfo        		= "0.33.0"
tokio 			= { version = "1.38", features = ["full"] }
env_logger 		= "0.11.5"

